# mago

./: .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-hooks.yaml  .rustfmt.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  SPONSORS.md  build.rs  composer.json  f.php  flake.nix  index.html  mago.toml  nightly-version  sitemap.xml  sponsors.json  versions.json
crates/allocator/: Cargo.toml
crates/allocator/examples/: compile.rs
crates/allocator/src/: alloc.rs  arena.rs  boxed.rs  collections.rs  copy.rs  iter.rs  lib.rs  prelude.rs  vec.rs
crates/bytes/: Cargo.toml
crates/bytes/src/: lib.rs
crates/codex/: Cargo.toml
crates/codex/benches/: combiner.rs  comparator.rs  expander.rs
crates/codex/src/: assertion.rs  diff.rs  differ.rs  issue.rs  lib.rs  misc.rs  populator.rs  reference.rs  signature.rs  signature_builder.rs  symbol.rs  utils.rs  visibility.rs
crates/codex/tests/: combiner_arrays.rs  combiner_atomic_pairs_explicit.rs  combiner_combinatorial.rs  combiner_floats.rs  combiner_integers.rs  combiner_megatable.rs  combiner_mixed.rs  combiner_null_void_never.rs  combiner_objects.rs  combiner_pairs.rs  combiner_property_idempotence.rs  combiner_resources.rs  combiner_scalars.rs  combiner_strings.rs  combiner_table_cases.rs  combiner_thresholds.rs  combiner_triples.rs  comparator_arrays.rs  comparator_combinatorial.rs  comparator_deep_structures.rs  comparator_flags.rs  comparator_floats.rs  comparator_integers.rs  comparator_iterable.rs  comparator_mixed.rs  comparator_objects.rs  comparator_pairs_explicit.rs  comparator_scalars.rs  comparator_unions.rs  incremental.rs  property_combiner_comparator.proptest-regressions  property_combiner_comparator.rs
crates/flags/: Cargo.toml
crates/flags/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs
crates/hir/tests/: delimited_spans.rs  fold_identity.rs  imported_name_disables_fallback.rs  integer_literal_long_semantics.rs  lower_settings.rs  name_interning.rs
crates/inference/: Cargo.toml
crates/inference/src/: error.rs  flow.rs  lib.rs  semantics.rs
crates/inference/tests/: annotations.rs  binary.rs  conditional.rs  constants.rs  constructs.rs  diverging.rs  flow.rs  if_else.rs  inference.rs  literal.rs  match_narrowing.rs  namespace.rs  narrowing.rs  smoke.rs  tdd.rs  unary_array_match.rs  variables.rs  yield_append.rs
crates/linter/: Cargo.toml
crates/linter/src/: ast.rs  category.rs  context.rs  import_tracker.rs  integration.rs  lib.rs  registry.rs  requirements.rs  rule.rs  rule_meta.rs  runner.rs  scope.rs  settings.rs
crates/linter/tests/: no_boolean_flag_parameter.rs  no_trailing_space.rs  prefer_early_continue.rs  rule_examples.rs  rule_excludes.rs  stdin_fix.rs
crates/oracle/: Cargo.toml
crates/oracle/benches/: workload_arena_lifecycle.rs  workload_builder_churn.rs  workload_cross_arena_compare.rs  workload_expand_resolve.rs  workload_join_bulk.rs  workload_lattice_storm.rs  workload_narrow_funnel.rs  workload_template_walk.rs
crates/oracle/src/: id.rs  lib.rs  name.rs  path.rs  var.rs  world.rs
crates/oracle/tests/: algorithmic_gaps.rs  cast_basic.rs  closure_instance.rs  combiner_arrays.rs  combiner_atomic_pairs_explicit.rs  combiner_combinatorial.rs  combiner_floats.rs  combiner_integers.rs  combiner_megatable.rs  combiner_mixed.rs  combiner_null_void_never.rs  combiner_objects.rs  combiner_options.rs  combiner_pairs.rs  combiner_property_idempotence.rs  combiner_resources.rs  combiner_scalars.rs  combiner_smoke.rs  combiner_strings.rs  combiner_table_cases.rs  combiner_thresholds.rs  combiner_triples.rs  combiner_void_value_context.rs  comparator_arrays.rs  comparator_booleans.rs  comparator_callable.rs  comparator_callable_signatures.rs  comparator_class_strings.rs  comparator_combinatorial.rs  comparator_deep_structures.rs  comparator_enum_structural.rs  comparator_flags.rs  comparator_floats.rs  comparator_generic_parameters.rs  comparator_generics.rs  comparator_indirection.rs  comparator_integers.rs  comparator_iterable.rs  comparator_mixed.rs  comparator_null_void_never.rs  (+46 more)
crates/pattern/: Cargo.toml
crates/pattern/src/: binding.rs  code_snippet.rs  compiler.rs  context.rs  file.rs  language.rs  lib.rs  node.rs  node_pattern.rs  query.rs  query_context.rs  resolved_pattern.rs  testing.rs  tree.rs
crates/pattern/tests/: named_dots_and_rewrites.rs  php_array_syntax.rs  reproduced_linter_rules.rs  rewrites.rs  sequence_and_modifier_sets.rs  statement_and_class_shapes.rs  surface_grammar.rs
crates/phpdoc-syntax/: Cargo.toml
crates/phpdoc-syntax/src/: error.rs  lib.rs
crates/phpdoc-syntax/tests/: corpus.rs  error_kinds.rs  errors.rs  inherit_doc.rs  structural.rs  trivia.rs
crates/reflector/: Cargo.toml
crates/reflector/src/: lib.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: baseline.rs  color.rs  error.rs  lib.rs  output.rs  reporter.rs
crates/server/: Cargo.toml
crates/server/src/: domain.rs  error.rs  file_analysis.rs  lib.rs  linter.rs  lookup.rs  server.rs  settings.rs
crates/syntax/fuzz/: Cargo.toml
crates/text-edit/: Cargo.toml
crates/twig-syntax/: Cargo.toml  README.md
crates/type-syntax/: Cargo.toml  README.md
crates/word/: Cargo.toml
docs/: Cargo.toml  README.md  benchmarks.md  config.toml  index.html  index.md  package-lock.json  package.json  playground.md  pnpm-lock.yaml  projects-using-mago.md  redirects.toml  sponsors.json  versions.json
docs/.vitepress/: config.mts
docs/fundamentals/: baseline.md  command-line-interface.md  shared-reporting-options.md  suppressing-issues.md
docs/guide/: configuration.md  environment-variables.md  initialization.md  installation.md  list-files.md  upgrading.md
docs/i18n/: en.toml  fr.toml  zh.toml
docs/recipes/: docker.md  github-actions.md  pre-commit-hooks.md  vscode.md  zed.md
docs/src/: benchmarks.rs  config.rs  content.rs  i18n.rs  main.rs  nav.rs  render.rs  rules.rs  versions.rs
docs/templates/: base.html  home.html  page.html  playground.html
docs/tools/: overview.md
(+12194 files in other folders)
