[package]
name = "mago-bytes"
description = "Shared byte-slice utilities for the Mago toolchain: lossy UTF-8 display wrapper, byte trimming helpers."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true
