[package]
name = "mago-codex"
description = "PHP type system representation, comparison logic, and codebase metadata for static analysis."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
property-tests = []
serde = [
    "dep:serde",
    "mago-reporting/serde",
    "mago-docblock/serde",
    "mago-word/serde",
    "mago-type-syntax/serde",
    "mago-php-version/serde",
]

[dependencies]
mago-reporting = { workspace = true }
mago-docblock = { workspace = true }
mago-word = { workspace = true }
mago-bytes = { workspace = true }
mago-span = { workspace = true }
mago-syntax = { workspace = true }
mago-type-syntax = { workspace = true }
mago-names = { workspace = true }
mago-database = { workspace = true }
mago-fingerprint = { workspace = true }
mago-php-version = { workspace = true }
foldhash = { workspace = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true }
strum = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
mago-allocator = { workspace = true }
memchr = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "expander"
harness = false

[[bench]]
name = "combiner"
harness = false

[[bench]]
name = "comparator"
harness = false
