[package]
name = "fennec-reflector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fennec-interner = { path = "../interner" }
fennec-span = { path = "../span" }
fennec-ast = { path = "../ast" }
fennec-walker = { path = "../walker" }
fennec-source = { path = "../source" }
fennec-inference = { path = "../inference" }
fennec-reflection = { path = "../reflection" }
serde = { workspace = true }
