[package]
name = "mago-server"
description = "A transport-agnostic backend for Mago's editor features (completion, hover, diagnostics, navigation), driving one workspace with no I/O of its own."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-analyzer = { workspace = true }
mago-bytes = { workspace = true }
mago-codex = { workspace = true }
mago-database = { workspace = true }
mago-formatter = { workspace = true }
mago-linter = { workspace = true }
mago-names = { workspace = true }
mago-orchestrator = { workspace = true }
mago-php-version = { workspace = true }
mago-reporting = { workspace = true }
mago-semantics = { workspace = true }
mago-span = { workspace = true }
mago-syntax = { workspace = true }
mago-syntax-core = { workspace = true }
mago-word = { workspace = true }
bumpalo = { workspace = true }
foldhash = { workspace = true }
memchr = { workspace = true }
xxhash-rust = { workspace = true }
