[package]
name = "mago-text-edit"
description = "A text editing library for Mago"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
