[package]
name = "mago-type-syntax"
description = "Provides core utilities useful for building lexers and parsers within Mago."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-allocator = { workspace = true }
mago-database = { workspace = true }
mago-span = { workspace = true }
mago-syntax-core = { workspace = true }
serde = { workspace = true, optional = true }
strum = { workspace = true }
ordered-float = { workspace = true, features = ["rand"] }

[features]
default = []
serde = [
    "dep:serde",
    "ordered-float/serde",
    "mago-span/serde",
    "mago-syntax-core/serde",
]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser"
harness = false
